fixed spacing for views

--- a/sites/all/themes/drupalcampaustin/styles/style.css
+++ b/sites/all/themes/drupalcampaustin/styles/style.css
@@ -777,8 +777,11 @@ div.link-field-subrow {
   }
 
 #main-content .views-row {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   }
+  #main-content .block .views-row { /* Fix for Front page blocks w/ views */
+    margin-bottom: 10px;
+    }
 
 
 /* =====================================
